--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "vue": "^2.6.14"
+    "pluralize": "^8.0.0",
+    "vue": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@nuxt/types": "~2.15.0",
